# UnrealNexus

./: .gitignore  CMakeLists.txt  README.md  UnrealNexus.uproject  appunti.md
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: DavidDefaultMat.uasset  ExampleMap.umap  ExampleMap_2.umap  ExampleMap_Buddha.umap  ExampleMap_David.umap  ExampleMap_Gargoyle.umap  ExampleMap_Pieta.umap  Mamemta.uasset  MeshVisualizer.uasset  NexusExampleComponent.uasset  NexusStaticActor.uasset  NexusTester.uasset  TestPawn.uasset  WireframeMaterial.uasset  airplane.nxs  cube.nxs  skull.nxz  sphere.nxz
Content/Blueprints/: UnrealNexusDemoGameMode.uasset
Content/Materials/: Tv.uasset
Content/Meshes/: david_100k.uasset  defaultMat.uasset
Content/NexusMeshes/Gargoyle/: gargo_mesh_Nexus.uasset  gargo_mesh_Nexus_Node0.uasset  gargo_mesh_Nexus_Node1.uasset  gargo_mesh_Nexus_Node10.uasset  gargo_mesh_Nexus_Node11.uasset  gargo_mesh_Nexus_Node12.uasset  gargo_mesh_Nexus_Node13.uasset  gargo_mesh_Nexus_Node14.uasset  gargo_mesh_Nexus_Node15.uasset  gargo_mesh_Nexus_Node16.uasset  gargo_mesh_Nexus_Node17.uasset  gargo_mesh_Nexus_Node18.uasset  gargo_mesh_Nexus_Node19.uasset  gargo_mesh_Nexus_Node2.uasset  gargo_mesh_Nexus_Node20.uasset  (+78 more)
Content/TestMaps/: David8M.umap  ExampleMap_Nettuno5M.umap  ExampleMap_Skull.umap  Grifone21M.umap  Nettuno5M.umap  Pieta51M.umap  Skull100k.umap
Plugins/NexusPlugin/: NexusPlugin.uplugin
Source/: UnrealNexus.Target.cs  UnrealNexusEditor.Target.cs
Source/UnrealNexus/: UnrealNexus.Build.cs  UnrealNexus.cpp
(+53 files in other folders)
